<resources>
    <string name="app_name">AlarmManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="submit">submit</string>
    <string name="plus">+</string>
    <string name="score">score</string>
    <string name="question">Question No: </string>
    <string name="stop_alarm">STOP ALARM</string>
    <string name="solve_the_puzzle_to_stop_the_alarm">Solve The Puzzle to stop the Alarm!!!</string>
</resources>
