<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:paddingLeft="@dimen/margin_16_dp"
    android:paddingRight="@dimen/margin_16_dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_18_dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_30_dp"
            android:gravity="center"
            android:text="@string/solve_the_puzzle_to_stop_the_alarm"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_30_dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/answer"
                android:layout_marginBottom="@dimen/margin_16_dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/question"
                android:textColor="@color/orange"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="@dimen/margin_16_dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/value_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/value_2"
                    android:layout_toStartOf="@+id/operation"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/orange" />

                <TextView
                    android:id="@+id/operation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/value_1"
                    android:layout_alignBottom="@+id/value_1"
                    android:layout_alignEnd="@+id/submit_button"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/value_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/answer"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/orange" />
            </LinearLayout>

            <EditText
                android:id="@+id/answer"
                android:layout_width="@dimen/width_150_dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numbers"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/enter_answer"
                android:inputType="number"
                android:textColor="@android:color/holo_purple"
                android:textColorHint="@android:color/holo_purple" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_35_dp"
                android:background="@android:color/holo_blue_bright"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/black" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>